# rust-gba

./: .gitignore  Cargo.toml
.github/workflows/: test.yml
emulator-barebones/: Cargo.toml
emulator-barebones/src/: main.rs
emulator-core/: Cargo.toml
emulator-core/benches/: bench_cpu.rs
emulator-core/src/: apu.rs  bit_manipulation.rs  bus.rs  cartridge.rs  cpu.rs  data_access.rs  keypad.rs  lcd.rs  lib.rs  timer.rs
emulator-core/src/apu/: dma_fifo.rs  noise.rs  tone.rs  tone_and_sweep.rs  wave.rs
emulator-core/src/cpu/: arm.rs  jit.rs  thumb.rs
emulator-core/src/lcd/: layer_0.rs  layer_1.rs  layer_2.rs  layer_3.rs
emulator-core/tests/: suite.gba
emulator-egui/: Cargo.toml
emulator-egui/src/: main.rs
emulator-native/: Cargo.toml
emulator-native/src/: main.rs  sample_source.rs
src/: apu.rs  bit_manipulation.rs  bus.rs  cartridge.rs  cpu.rs  keypad.rs  lcd.rs  main.rs  timer.rs
src/cartridge/: backup_types.rs
src/cpu/: arm.rs  display.rs  thumb.rs
src/lcd/: layer_0.rs  layer_1.rs  layer_2.rs  layer_3.rs
