[package]
name = "rust-gba"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4.0"
phf = { version = "0.10.1", features = ["macros"] }
pixels = "0.9.0"
regex = "1.5.4"
winit = "0.26.1"
xxhash-rust = { version = "0.8.3", features = ["xxh3"] }

[profile.release]
opt-level = 3
debug = 2
overflow-checks = true
# lto = true
# codegen-units = 1