[package]
name = "emulator-barebones"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
clap = { version = "4.0.29", features = ["derive"] }
emulator-core = { path = "../emulator-core" }
env_logger = "0.10.0"
log = "0.4.17"