[package]
name = "emulator-core"
version = "0.2.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
lazy_static = "1.4.0"
log = "0.4.19"
phf = { version = "0.11.1", features = ["macros"] }
regex = "1.8.4"
serde = { version = "1.0.164", features = ["derive"] }
serde_with = "3.0.0"
xxhash-rust = { version = "0.8.6", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_cpu"
harness = false
