[package]
name = "emulator-core"
version = "0.2.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lazy_static = "1.4.0"
log = "0.4.20"
phf = { version = "0.11.2", features = ["macros"] }
regex = "1.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_with = "3.3.0"
xxhash-rust = { version = "0.8.7", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench_cpu"
harness = false
