[package]
name = "emulator-native"
version = "0.1.0"
edition = "2021"
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.6", features = ["derive"] }
emulator-core = { path = "../emulator-core" }
env_logger = "0.10.0"
log = "0.4.17"
pixels = "0.11.0"
serde_cbor = "0.11.2"
serde_json = "1.0.93"
winit = "0.28.1"
